--- a/package.json
+++ b/package.json
@@ -8,13 +8,30 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/yup": "^0.29.0",
+    "axios": "^0.19.2",
+    "formik": "^2.1.4",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.6",
     "next": "9.3.3",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "yup": "^0.29.0"
   },
   "devDependencies": {
     "@types/node": "^13.11.1",
     "@types/react": "^16.9.34",
+    "prettier": "^2.0.5",
     "typescript": "^3.8.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "pages/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write"
+    ]
   }
 }
